--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,10 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <spring.ver>3.2.13.RELEASE</spring.ver>
+        <aspectj.ver>1.8.7</aspectj.ver>
     </properties>
     <dependencies>
+        <!--Spring core -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -31,6 +33,24 @@
             <artifactId>spring-jdbc</artifactId>
             <version>${spring.ver}</version>
         </dependency>
+
+        <!-- AOP-->
+        <dependency>
+        	<groupId>org.springframework</groupId>
+        	<artifactId>spring-aop</artifactId>
+        	<version>${spring.ver}</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.aspectj</groupId>
+        	<artifactId>aspectjweaver</artifactId>
+        	<version>${aspectj.ver}</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.aspectj</groupId>
+        	<artifactId>aspectjrt</artifactId>
+        	<version>${aspectj.ver}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
