--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
     <groupId>by.epam.spring</groupId>
     <artifactId>by.epam.spring.core</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <properties>
         <spring.ver>3.2.13.RELEASE</spring.ver>
         <aspectj.ver>1.8.7</aspectj.ver>
