--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <properties>
         <spring.ver>3.2.13.RELEASE</spring.ver>
         <aspectj.ver>1.8.7</aspectj.ver>
+        <derby.ver>10.12.1.1</derby.ver>
     </properties>
     <dependencies>
         <!--Spring core -->
@@ -61,6 +62,13 @@
         	<groupId>org.aspectj</groupId>
         	<artifactId>aspectjrt</artifactId>
         	<version>${aspectj.ver}</version>
+        </dependency>
+
+        <!--Derby DB-->
+        <dependency>
+        	<groupId>org.apache.derby</groupId>
+        	<artifactId>derby</artifactId>
+        	<version>${derby.ver}</version>
         </dependency>
 
     </dependencies>
